add_executable(
    LunaEditor
    ${PROJECT_SOURCE_DIR}/Luna/Core/main.cpp
    Panels/AssetLoadingPanel.h
    Panels/AssetLoadingPanel.cpp
    Panels/BackendCapabilitiesPanel.h
    Panels/BackendCapabilitiesPanel.cpp
    Panels/BuiltinMaterialsPanel.h
    Panels/BuiltinMaterialsPanel.cpp
    Panels/ContentBrowserPanel.h
    Panels/ContentBrowserPanel.cpp
    EditorCamera.h
    EditorCamera.cpp
    EditorAssetDragDrop.h
    Panels/InspectorPanel.h
    Panels/InspectorPanel.cpp
    LunaEditorApp.h
    LunaEditorApp.cpp
    LunaEditorLayer.h
    LunaEditorLayer.cpp
    Panels/RenderDebugPanel.h
    Panels/RenderDebugPanel.cpp
    Panels/RenderFeaturesPanel.h
    Panels/RenderFeaturesPanel.cpp
    Panels/RenderProfilerPanel.h
    Panels/RenderProfilerPanel.cpp
    ScriptComponentInspector.h
    ScriptComponentInspector.cpp
    Panels/SceneSettingPanel.h
    Panels/SceneSettingPanel.cpp
    Panels/ScriptPluginsPanel.h
    Panels/ScriptPluginsPanel.cpp
    Panels/SceneHierarchyPanel.h
    Panels/SceneHierarchyPanel.cpp
    ${PROJECT_SOURCE_DIR}/third_party/ImGuizmo/ImGuizmo.cpp
)

target_include_directories(
    LunaEditor
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${PROJECT_SOURCE_DIR}/third_party/ImGuizmo
)

target_link_libraries(
    LunaEditor
    PRIVATE
        LunaCore
)

set_target_properties(
    LunaEditor
    PROPERTIES
        VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}"
)
