set(THIRD_PARTY_DIR ${PROJECT_SOURCE_DIR}/third_party)

set(IMGUI_SOURCE ${THIRD_PARTY_DIR}/imgui/imgui.cpp
    ${THIRD_PARTY_DIR}/imgui/imgui_demo.cpp
    ${THIRD_PARTY_DIR}/imgui/imgui_draw.cpp
    ${THIRD_PARTY_DIR}/imgui/imgui_tables.cpp
    ${THIRD_PARTY_DIR}/imgui/imgui_widgets.cpp
    ${THIRD_PARTY_DIR}/imgui/backends/imgui_impl_glfw.cpp
    ${THIRD_PARTY_DIR}/imgui/backends/imgui_impl_vulkan.cpp)

set(RENDERER_SOURCE
    Renderer/Camera.h
    Renderer/Camera.cpp
    Renderer/ImageLoader.h
    Renderer/ImageLoader.cpp
    Renderer/ModelLoader.h
    Renderer/ModelLoader.cpp
    Renderer/RenderGraph.h
    Renderer/RenderGraph.cpp
    Renderer/RenderGraphBuilder.h
    Renderer/RenderGraphBuilder.cpp
    Renderer/ShaderLoader.h
    Renderer/ShaderLoader.cpp
    Renderer/VulkanRenderer.h
    Renderer/VulkanRenderer.cpp)

set(VAL_SOURCE
    Vulkan/ArrayUtils.h
    Vulkan/Buffer.h
    Vulkan/Buffer.cpp
    Vulkan/CommandBuffer.h
    Vulkan/CommandBuffer.cpp
    Vulkan/DescriptorBinding.h
    Vulkan/DescriptorBinding.cpp
    Vulkan/DescriptorCache.h
    Vulkan/DescriptorCache.cpp
    Vulkan/GraphicShader.h
    Vulkan/GraphicShader.cpp
    Vulkan/Image.h
    Vulkan/Image.cpp
    Vulkan/Pipeline.h
    Vulkan/Pipeline.cpp
    Vulkan/RenderPass.h
    Vulkan/RenderPass.cpp
    Vulkan/Sampler.h
    Vulkan/Sampler.cpp
    Vulkan/Shader.h
    Vulkan/ShaderReflection.h
    Vulkan/ShaderReflection.cpp
    Vulkan/StageBuffer.h
    Vulkan/StageBuffer.cpp
    Vulkan/VirtualFrame.h
    Vulkan/VirtualFrame.cpp
    Vulkan/VulkanContext.h
    Vulkan/VulkanContext.cpp
    Vulkan/VulkanMemoryAllocator.h
    Vulkan/VulkanMemoryAllocator.cpp
    Vulkan/VulkanSurface.h
    Vulkan/VulkanSurface.cpp
    Imgui/ImGuiContext.h
    Imgui/ImGuiContext.cpp
    Imgui/ImGuiRenderPass.h)

add_library(
    LunaCore
    STATIC
    Core/Application.h
    Core/Application.cpp
    Core/Input.h
    Imgui/ImGuiLayer.hpp
    Imgui/ImGuiLayer.cpp
    Core/KeyCodes.h
    Core/Layer.h
    Core/LayerStack.h
    Core/LayerStack.cpp
    Core/Log.h
    Core/Log.cpp
    Core/MouseCodes.h
    Core/Timestep.h
    Core/Window.h
    Core/Window.cpp
    Plugin/PluginBootstrap.h
    Plugin/PluginRegistry.h
    Plugin/PluginRegistry.cpp
    Plugin/ServiceRegistry.h
    Events/ApplicationEvent.h
    Events/Event.h
    Events/KeyEvent.h
    Events/MouseEvent.h
    Platform/GLFWKeyCodes.hpp
    Platform/GLFWMouseCodes.hpp
    Platform/GLFWWindow.hpp
    Platform/GLFWWindow.cpp
    Platform/GLFWWindowInput.cpp
    JobSystem/ResourceLoadQueue.h
    JobSystem/TaskHandle.h
    JobSystem/TaskHandle.cpp
    JobSystem/TaskHandleState.h
    JobSystem/TaskSystem.h
    JobSystem/TaskSystem.cpp
    ${RENDERER_SOURCE}
    ${VAL_SOURCE}
    ${IMGUI_SOURCE}
)

target_include_directories(
    LunaCore
    SYSTEM PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${THIRD_PARTY_DIR}/imgui
        ${THIRD_PARTY_DIR}/spdlog/include
        ${THIRD_PARTY_DIR}/glfw/include
        ${THIRD_PARTY_DIR}/glm
        ${THIRD_PARTY_DIR}/vkbootstrap/src
        ${PROJECT_SOURCE_DIR}
)

target_link_libraries(LunaCore 
        PUBLIC
        spdlog::spdlog
        fastgltf::fastgltf
        glslang::glslang
        glslang::glslang-default-resource-limits
        glslang::SPIRV
        GPUOpen::VulkanMemoryAllocator
        Vulkan::Vulkan
        glfw
        enkiTS
        spirv-cross-core
        stb::stb
)

target_compile_definitions(
    LunaCore
    PUBLIC
        SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_TRACE
        GLM_ENABLE_EXPERIMENTAL
)

