set(THIRD_PARTY_DIR ${PROJECT_SOURCE_DIR}/third_party)

add_subdirectory(RHI)

set(IMGUI_SOURCE ${THIRD_PARTY_DIR}/imgui/imgui.cpp
    ${THIRD_PARTY_DIR}/imgui/imgui_demo.cpp
    ${THIRD_PARTY_DIR}/imgui/imgui_draw.cpp
    ${THIRD_PARTY_DIR}/imgui/imgui_tables.cpp
    ${THIRD_PARTY_DIR}/imgui/imgui_widgets.cpp
    ${THIRD_PARTY_DIR}/imgui/backends/imgui_impl_glfw.cpp)

set(RENDERER_SOURCE
    Math/Math.h
    Math/Math.cpp
    Renderer/Camera.h
    Renderer/Camera.cpp
    Renderer/Material.h
    Renderer/Material.cpp
    Renderer/Mesh.h
    Renderer/Mesh.cpp
    Renderer/PrimitiveMeshFactory.h
    Renderer/PrimitiveMeshFactory.cpp
    Renderer/RenderGraph.h
    Renderer/RenderGraph.cpp
    Renderer/RenderGraphBuilder.h
    Renderer/RenderGraphBuilder.cpp
    Renderer/RenderProfileExporter.h
    Renderer/RenderProfileExporter.cpp
    Renderer/RenderViewState.h
    Renderer/RenderViewState.cpp
    Renderer/RenderFlow/LightingExtensionInputs.h
    Renderer/RenderFlow/LightingExtensionInputs.cpp
    Renderer/RenderFlow/RenderFlow.h
    Renderer/RenderFlow/RenderFlow.cpp
    Renderer/RenderFlow/RenderFlowBuilder.h
    Renderer/RenderFlow/RenderFlowBuilder.cpp
    Renderer/RenderFlow/RenderFlowTypes.h
    Renderer/RenderFlow/RenderFeature.h
    Renderer/RenderFlow/RenderFeatureSupport.h
    Renderer/RenderFlow/RenderFeatureSupport.cpp
    Renderer/RenderFlow/RenderFeatureGraphContract.h
    Renderer/RenderFlow/RenderFeatureGraphContract.cpp
    Renderer/RenderFlow/RenderPassGraphContract.h
    Renderer/RenderFlow/RenderPassGraphContract.cpp
    Renderer/RenderFlow/RenderFeatureBindingContract.h
    Renderer/RenderFlow/RenderFeatureBindingContract.cpp
    Renderer/RenderFlow/RenderFeatureResources.h
    Renderer/RenderFlow/RenderFeatureResources.cpp
    Renderer/RenderFlow/ShaderBindingContract.h
    Renderer/RenderFlow/ShaderBindingContract.cpp
    Renderer/RenderFlow/RenderFeatureRegistry.h
    Renderer/RenderFlow/RenderFeatureRegistry.cpp
    Renderer/RenderFlow/RenderResourceKey.h
    Renderer/RenderFlow/Features/FeatureProbe.h
    Renderer/RenderFlow/Features/FeatureProbe.cpp
    Renderer/RenderFlow/Features/RenderFeatureModules.h
    Renderer/RenderFlow/Features/RenderFeatureModules.cpp
    Renderer/RenderFlow/Features/ScreenSpaceAmbientOcclusionFeature.h
    Renderer/RenderFlow/Features/ScreenSpaceAmbientOcclusionFeature.cpp
    Renderer/RenderFlow/Features/TemporalAntiAliasingFeature.h
    Renderer/RenderFlow/Features/TemporalAntiAliasingFeature.cpp
    Renderer/RenderFlow/RenderBlackboardKeys.h
    Renderer/RenderFlow/RenderSlots.h
    Renderer/RenderFlow/RenderSlotPass.h
    Renderer/RenderFlow/RenderSlotPass.cpp
    Renderer/RenderFlow/RenderPass.h
    Renderer/RenderFlow/RenderPass.cpp
    Renderer/RenderFlow/DefaultRenderFlow.h
    Renderer/RenderFlow/DefaultRenderFlow.cpp
    Renderer/RenderFlow/DefaultScene/Feature.h
    Renderer/RenderFlow/DefaultScene/Feature.cpp
    Renderer/RenderFlow/DefaultScene/Constants.h
    Renderer/RenderFlow/DefaultScene/GpuTypes.h
    Renderer/RenderFlow/DefaultScene/PassResources.h
    Renderer/RenderFlow/DefaultScene/SharedState.h
    Renderer/RenderFlow/DefaultScene/SharedState.cpp
    Renderer/RenderFlow/DefaultScene/DrawQueue.h
    Renderer/RenderFlow/DefaultScene/DrawQueue.cpp
    Renderer/RenderFlow/DefaultScene/AssetCache.h
    Renderer/RenderFlow/DefaultScene/AssetCache.cpp
    Renderer/RenderFlow/DefaultScene/BindingSchema.h
    Renderer/RenderFlow/DefaultScene/BindingSchema.cpp
    Renderer/RenderFlow/DefaultScene/Environment.h
    Renderer/RenderFlow/DefaultScene/Environment.cpp
    Renderer/RenderFlow/DefaultScene/PipelineResources.h
    Renderer/RenderFlow/DefaultScene/PipelineResources.cpp
    Renderer/RenderFlow/DefaultScene/PipelineState.h
    Renderer/RenderFlow/DefaultScene/PipelineState.cpp
    Renderer/RenderFlow/DefaultScene/Passes/PassCommon.h
    Renderer/RenderFlow/DefaultScene/Passes/PassCommon.cpp
    Renderer/RenderFlow/DefaultScene/Passes/EnvironmentPass.h
    Renderer/RenderFlow/DefaultScene/Passes/EnvironmentPass.cpp
    Renderer/RenderFlow/DefaultScene/Passes/ShadowPass.h
    Renderer/RenderFlow/DefaultScene/Passes/ShadowPass.cpp
    Renderer/RenderFlow/DefaultScene/Passes/GBufferPass.h
    Renderer/RenderFlow/DefaultScene/Passes/GBufferPass.cpp
    Renderer/RenderFlow/DefaultScene/Passes/LightingPass.h
    Renderer/RenderFlow/DefaultScene/Passes/LightingPass.cpp
    Renderer/RenderFlow/DefaultScene/Passes/SkyPass.h
    Renderer/RenderFlow/DefaultScene/Passes/SkyPass.cpp
    Renderer/RenderFlow/DefaultScene/Passes/TransparentPass.h
    Renderer/RenderFlow/DefaultScene/Passes/TransparentPass.cpp
    Renderer/RenderWorld/RenderWorld.h
    Renderer/RenderWorld/RenderWorld.cpp
    Renderer/RenderWorld/RenderTypes.h
    Renderer/RenderWorld/RenderWorldExtractor.h
    Renderer/RenderWorld/RenderWorldExtractor.cpp
    Renderer/RendererUtilities.h
    Renderer/RendererUtilities.cpp
    Renderer/Image/ImageDataUtils.h
    Renderer/Image/ImageDataUtils.cpp
    Renderer/Resources/ShaderModuleLoader.h
    Renderer/Resources/ShaderModuleLoader.cpp
    Renderer/Resources/TextureUpload.h
    Renderer/Resources/TextureUpload.cpp
    Renderer/Shaders/EnvironmentIBL.slang
    Renderer/Shaders/SceneGeometry.slang
    Renderer/Shaders/SceneLighting.slang
    Renderer/Shaders/ScreenSpaceAmbientOcclusion.slang
    Renderer/Shaders/ShadowMapping.slang
    Renderer/Shaders/TemporalAntiAliasing.slang
    Renderer/Renderer.h
    Renderer/Renderer.cpp

    Renderer/Texture.h
    )

set(SCENE_SOURCE
    Scene/Components.h
    Scene/Entity.h
    Scene/Entity.cpp
    Scene/EntityManager.h
    Scene/EntityManager.cpp
    Scene/Scene.h
    Scene/Scene.cpp
    Scene/SceneSerializer.h
    Scene/SceneSerializer.cpp)

set(RHI_RUNTIME_SOURCE
    Imgui/ImGuiContext.cpp
    Imgui/ImGuiRenderPass.h
    Imgui/Shaders/ImGui.slang)

set(PROJECT_SOURCE
    Project/BuiltinMaterialOverrides.h
    Project/BuiltinMaterialOverrides.cpp
    Project/ProjectInfo.h
    Project/ProjectManager.h
    Project/ProjectManager.cpp)

set(PLATFORM_SOURCE
    Platform/Common/FileDialogs.h)

set(ASSET_SOURCE
    Asset/BuiltinAssets.h
    Asset/BuiltinAssets.cpp
    Asset/Model.h
    Asset/Model.cpp
    Asset/AssetManager.h
    Asset/AssetManager.cpp
    Asset/Asset.h
    Asset/AssetDatabase.h
    Asset/AssetDatabase.cpp
    Asset/AssetMetadata.h
    Asset/AssetTypes.h
    Asset/Editor/Importer.h
    Asset/Editor/ImporterManager.h
    Asset/Editor/ImporterManager.cpp
    Asset/Editor/FbxModelAssetGenerator.h
    Asset/Editor/FbxModelAssetGenerator.cpp
    Asset/Editor/GltfModelAssetGenerator.h
    Asset/Editor/GltfModelAssetGenerator.cpp
    Asset/Editor/ImageLoader.h
    Asset/Editor/ImageLoader.cpp
    Asset/Editor/Loader.h
    Asset/Editor/LoaderManager.h
    Asset/Editor/LoaderManager.cpp
    Asset/Editor/MaterialFactory.h
    Asset/Editor/MaterialFactory.cpp
    Asset/Editor/MaterialImporter.h
    Asset/Editor/MaterialLoader.h
    Asset/Editor/MeshImporter.h
    Asset/Editor/MeshLoader.h
    Asset/Editor/MeshLoader.cpp
    Asset/Editor/ModelImporter.h
    Asset/Editor/ModelLoader.h
    Asset/Editor/TextureImporter.h
    Asset/Editor/TextureLoader.h
    Asset/Editor/TextureLoader.cpp
)

if(WIN32)
    list(APPEND PLATFORM_SOURCE
        Platform/Windows/WinFileDialogs.cpp)
endif()

add_library(
    LunaCore
    STATIC
    Core/Application.h
    Core/Application.cpp
    Core/Input.h
    Imgui/ImGuiLayer.hpp
    Imgui/ImGuiLayer.cpp
    Core/KeyCodes.h
    Core/Layer.h
    Core/LayerStack.h
    Core/LayerStack.cpp
    Core/Log.h
    Core/Log.cpp
    Core/MouseCodes.h
    Core/Timestep.h
    Core/Window.h
    Core/Window.cpp
    Core/UUID.h
    Core/UUID.cpp

    Events/ApplicationEvent.h
    Events/Event.h
    Events/KeyEvent.h
    Events/MouseEvent.h

    Platform/GLFWKeyCodes.hpp
    Platform/GLFWMouseCodes.hpp
    Platform/GLFWWindow.hpp
    Platform/GLFWWindow.cpp
    Platform/GLFWWindowInput.cpp
    ${PLATFORM_SOURCE}

    JobSystem/ResourceLoadQueue.h
    JobSystem/TaskHandle.h
    JobSystem/TaskHandle.cpp
    JobSystem/TaskHandleState.h
    JobSystem/TaskSystem.h
    JobSystem/TaskSystem.cpp

    ${PROJECT_SOURCE}

    ${ASSET_SOURCE}

    ${SCENE_SOURCE}
    ${RENDERER_SOURCE}
    ${RHI_RUNTIME_SOURCE}
    ${IMGUI_SOURCE}
)

target_include_directories(
    LunaCore
    SYSTEM PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${THIRD_PARTY_DIR}/imgui
        ${THIRD_PARTY_DIR}/spdlog/include
        ${THIRD_PARTY_DIR}/glfw/include
        ${THIRD_PARTY_DIR}/glm
        ${THIRD_PARTY_DIR}/entt/src
        ${EXTERNAL_DIR}/yaml-cpp/include
        ${PROJECT_SOURCE_DIR}
)

target_link_libraries(LunaCore
        PUBLIC
        LunaRHI
        spdlog::spdlog
        fastgltf::fastgltf
        ufbx
        # add_subdirectory(third_party/VMA)
        Vulkan::Vulkan
        glfw
        enkiTS
        # spirv-cross-core
        stb::stb
        yaml-cpp::yaml-cpp
)

target_compile_definitions(
    LunaCore
    PUBLIC
        LUNA_PROJECT_ROOT="${PROJECT_SOURCE_DIR}"
        SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_TRACE
        GLM_ENABLE_EXPERIMENTAL
)
